<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillSplit">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="265dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="258dp"
        android:text="@string/txtTitle"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtRequest"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="379dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPeople"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtRequest"
        app:layout_constraintTop_toBottomOf="@+id/txtRequest" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="301dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/btnCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/btnCost"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginBottom="244dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnCost"
        app:layout_constraintTop_toBottomOf="@+id/btnCost" />
</androidx.constraintlayout.widget.ConstraintLayout>